--- a/newDate.html
+++ b/newDate.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <input type="text" id="demo"> -->
+    <p id="demo"></p>
+    <script>
+        var d = new Date();
+        document.getElementById("demo").innerHTML = d;
+    </script>
 </body>
 </html>
